change table schema

--- a/config.json
+++ b/config.json
@@ -64,5 +64,6 @@
       "depositNetprofitTranDesc1": "Bagi Hasil Deposito",
       "depositNetprofitTranDesc3": null
     }
-  }
+  },
+  "skipTests": true
 }
