--- a/k8s/Dockerfile
+++ b/k8s/Dockerfile
@@ -1,4 +1,5 @@
 FROM alpine:3.10 AS final
 WORKDIR "/app"
-COPY td config.json ./
-ENTRYPOINT ["/app/td"]
+COPY ./config.json  /app
+COPY $BINARY  /app
+ENTRYPOINT ["/app/$BINARY"]
