--- a/k8s/Dockerfile
+++ b/k8s/Dockerfile
@@ -4,8 +4,9 @@ ENV GOPROXY="https://proxy.golang.org,direct"
 ENV APP_PATH="/app/td"
 WORKDIR "/app"
 COPY . .
-RUN git config --global http.extraheader "PRIVATE-TOKEN: glpat-UpdFVcqHGC_kxYB_8KsF"
-RUN git config --global url."git@gitlab.com:".insteadof "https://gitlab.com/"
+#RUN git config --global http.extraheader "PRIVATE-TOKEN: glpat-UpdFVcqHGC_kxYB_8KsF"
+#RUN git config --global url."git@gitlab.com:".insteadof "https://gitlab.com/"
+RUN git config --global url."https://gitlab-ci-token:${CI_JOB_TOKEN}@gitlab.com".insteadOf "https://gitlab.com"
 RUN go mod download
 RUN CGO_ENABLED=0 GOARCH=amd64 GOOS=linux go build -ldflags '-w -s' -a -o ${APP_PATH} .
 RUN ls
