--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,3 +2,5 @@ include:
   - project: '${CORE_CI}'
     ref : '${CORE_CI_BRANCH}'
     file: '${CORE_CI_FILE}'
+before_script:
+  - git config --global url."https://gitlab-ci-token:${CI_JOB_TOKEN}@gitlab.com".insteadOf "https://gitlab.com"
